--- a/contact_me.html
+++ b/contact_me.html
@@ -27,7 +27,7 @@
          <br>
          <br>
          <label for="mail"> Your Email:</label>
-         <input type="text" value="Please enter your mail">
+         <input type="email" value="Please enter your mail">
          <br>
          <br>
          <label for="feeback">Your message:</label>
